# eval

./: .gitignore  README.md  add_nll_to_summary.py  analyze_benchmark_results.py  batch_evaluate_accompaniment_metrics.sh  batch_evaluate_stanley.sh  batch_plot_calculate_system_metrics.sh  batch_plot_music_metrics.sh  batch_run_evaluate.py  batch_runs.conf  bulk_analyze_benchmarks.py  change_track_name.py  compute_dmr.py  compute_final_system_metric.py  evaluate_accompaniment_metrics.py  extract.py  plot_final_global.py  plot_harmonicity.py  plot_inter_track_continuity.py  plot_jsd.py  plot_wISR_RD_wnll.py  pyproject.toml  run_prompt_polydis_eval.sh  summarize_metrics.py
configs/: analysis_config_fig3_fig4.yaml
src/benchmarks/: __init__.py  analyze_generation_length.py  bulk_analysis.py  constants.py  fit_latency_formulas.py  yaml_bulk_analysis.py
src/eval_toolkit/: README.md  __init__.py  csv_exporter.py  json_parser.py  path_utils.py  stats.py
src/nll_compute/: README.md  aggregate.py  batch.py  cal_nll.py  cal_nll_aggregate.py  core.py  plot.py  plot_nll_heatmap.py  run_nll_from_manifest.py
src/nll_compute/runners/: README.md  run_aggregate.py  run_cal_nll.py  run_from_manifest.py  run_heatmap.py
src/plot/: plot_harmonicity.py  plot_harmonicity_simple.py  plot_inter_track_continuity.py  plot_jsd.py  plot_music_quality.py  plot_system_performance.py
src/utilty/: batch_change_track_name.py
